# Matthews

./: .editorconfig  .gitignore  README.md  example.env  package-lock.json
ML/: ML_Leher.ipynb
api/app/core/: config.py
app/: page.tsx
backend/: .dockerignore  .gitignore  Pipfile  README.md  dockerfile  example.env  fly.toml  package.json  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: afa80ce66778_initial_revision.py
backend/api/: example.env  pyproject.toml
backend/api/app/api/v1/: auth.py  property.py
backend/api/app/model/: user.py
backend/app/: main.py
backend/app/ai/: Gradient Boosting_model.pkl  README.md  Random_Forest_high_performing_model_v2.pkl  __init__.py  gradient_bosting_model_v2.pkl  model.py  v1_L_MLv1-checkpoint.ipynb  vA_allParLeher_Gradient Boosting.pkl  vA_allParLeher_Random Forest.pkl  vA_allParamsLeher-checkpoint.ipynb  vB_fiveParamsLeher-checkpoint.ipynb
backend/app/ai/v1_model/: L_MLv1-checkpoint.ipynb  README.md  model_limited.csv  v1_L_Gradient Boosting_high_performing_model.pkl
backend/app/ai/v2_model/: cleaned_dataset.csv  maes.txt  v2_modelGradient Boosting.pkl  v2_modelGradient_Boosting.pkl  v2_modelLinear Regression.pkl  v2_modelLinear_Regression.pkl  v2_modelRandom Forest.pkl  v2_modelRandom_Forest.pkl  v2_modelRandom_Forest_Pipeline.pkl  vB_fiveParamsLeher-checkpoint.ipynb
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  data_collection.py  property.py
backend/app/auth/: __init__.py  google.py  password.py
backend/app/core/: config.py
backend/app/db/: session.py  sheets.py
backend/app/model/: __init__.py  property.py  user.py
backend/app/services/: addresses.py  properties.py  sessions.py  users.py
backend/scripts/: address_apis.py  addresses.py  test_model.py
data/: CostarExport_1.csv  CostarExport_1.xlsx  LA_Multifamily_Sold_Last_Year_All_Combined_9-15-23.xlsx  LA_multifamily.csv  Taylor_Avakian_Market_Owners_2023.csv  Taylor_Avakian_Market_Owners_2023.xlsx  final_processed_dataset.xlsx  realtors_added.csv
data/data_analysis/: eda.ipynb  matthews_data_EDA.ipynb  model.py
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  postcss.config.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  webpack-runtime.js
frontend/api/: pyproject.toml  vercel.json
frontend/api/app/db/: session.py
frontend/src/: env.d.ts
frontend/src/app/: global.css  globals.css  gradient.tsx  layout.tsx  page.module.css  page.tsx
frontend/src/components/: analytics.tsx  contact-form.tsx  google-analytics.tsx  gradient.jsx  number-bar.tsx  number-range.tsx  sidebar-footer.tsx  sidebar.tsx  user-menu.tsx
frontend/src/contexts/: providers.tsx
frontend/src/lib/: bridge.ts  env.ts  gtag.ts  (+5 more)
other/: cleaned_dataset.csv  dataset_learning-sept-16.ipynb  dataset_learning-sept-17.ipynb
(+228 files in other folders)
